pages/static/src/scss/components/_card.scss
.card-list {
  list-style-type: none;
  margin: 0 0 1% 0;
  padding: 0;

  #initiatives-list &.third {
    margin: 0 -15px 10px;
  }

  &.third {

    .card {
      width: 32.3%;
      margin: 0 1% 1% 0;

      &:nth-child(even) {
        margin-right: 1%;
      }

      &:nth-child(3n) {
        margin-right: 0;
      }

      @include until($medium) {
        width: 49%;
        margin-right: 1%;

        &:nth-child(3n) {
          margin-right: 1%;
        }

        &:nth-child(2n) {
          margin-right: 0;
        }
      };

      @include until($small) {
        width: 100%;
        margin-right: 0%;

        &:nth-child(3n) {
          margin-right: 0;
        }

        &:nth-child(2n) {
          margin-right: 0;
        }
      };
    }
  }

  .card {
    width: 23.5%;
    height: 125px;
    background: #f5f5f5;
    display: inline-block;
    overflow: hidden;
    border-radius: 3px;
    margin: 1% 1% 0 0;
    transition: 0.1s;

    .icon {
      width: 25px;
      height: 25px;
      display: block;
      float: right;
      margin-left: 10px;
    }

    &.faded {
      opacity: 0.8;

      &:hover {
        opacity: 0.7;
      }
    }

    &.featured {
      border-right: 4px solid $red;
    }

    &__content {
      height: 125px;
      position: relative;
    }

    &__name {
      line-height: 12px;
    }

    &__location {
      font-size: 12px;
      // letter-spacing: 1px;
      font-weight: bolder;
      line-height: 12px;
    }

    &:hover {
      opacity: 0.9;
      transform: scale(1.05);
    }

    a {
      color: #333;
    }
  }

  .card__photo {
    display: inline-block;
    border-radius: 3px 0 0 3px;
    height: 125px;
    width: 100px;
    background: #999;
    background-size: cover;
    background-position: center;
  }

  .card__item {
    display: block;
    line-height: 1.1em;

    &.bold {
      font-weight: bolder;
    }

    &.smaller {
      font-size: 12px;
      line-height: 12px;
    }

    &.bottom {
      position: absolute;
      bottom: 0px;
      left: 0px;
      padding: 0 10px 10px 10px;

      &.large {
        bottom: 5px;
        font-size: 18px;
        font-weight: 700;
        left: 10px;
      }
    }
  }

  .card__content {
    width: calc(100% - 100px);
    float: right;
    padding: 10px;

    &.full {
      width: 100%;
    }
  }
}

@media (max-width: 1199px) {
  .card-list {
    .card {
      width: 32%;
    }
  }
}

@media (max-width: 991px) {
  .card-list {
    .card {
      width: 49%;

      &:nth-child(even) {
        margin-right: 0;
      }
    }
  }
}

@media (max-width: 767px) {
  .card-list {
    .card {
      width: 100%;
      margin-right: 0;
    }
  }
}

.card-list-tools {

  .card {
    background: $blue;

    a {
      color: #ffffff;
    }

    .card__content {
      padding: 0;
    }

    .card__item {

      &.bottom {
        background-color: rgba(0, 0, 0, 0.2);
        bottom: 0px;
        font-weight: 700;
        left: 0px;
        padding: 15px;
        right: 0px;
      }
    }
  }
}

